# error-envelope

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  ERROR_CODES.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: axum_server.rs  domain_errors.rs  rate_limiting.rs  tracing.rs  validation.rs
src/: anyhow_support.rs  axum_support.rs  codes.rs  error.rs  helpers.rs  lib.rs  tests.rs
