[package]
name = "error-envelope"
version = "0.1.0"
edition = "2021"
authors = ["Blackwell Systems <noreply@blackwell.systems>"]
license = "MIT"
description = "A tiny, framework-agnostic error envelope for HTTP APIs with Rust implementation of err-envelope"
documentation = "https://docs.rs/error-envelope"
repository = "https://github.com/blackwell-systems/error-envelope"
homepage = "https://github.com/blackwell-systems/error-envelope"
readme = "README.md"
keywords = ["error", "http", "api", "envelope", "rest"]
categories = ["web-programming", "api-bindings"]
rust-version = "1.70"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
http = "1.0"

# Optional framework integrations
axum = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"

[features]
default = []
axum-support = ["axum"]
